unpackaged/main/default/objects/ETT_Tyre_Inventory__c/ETT_Tyre_Inventory__c.object-meta.xml
<CustomObject>
    <label>Tyre Inventory</label>
    <nameField>
        <displayFormat>TI-{0000}</displayFormat>
        <label>Tyre Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tyre Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>