unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Claim_Process__c.field-meta.xml
<CustomField>
    <fullName>Claim_Process__c</fullName>
    <label>Claim Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>