unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Date__c</fullName>
    <formula>ETT_Work_Order_Line_Item__r.ETT_Collection_Card__r.ETT_Collection_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>