unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inventory_Status__c</fullName>
    <label>Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved by Receptionist</fullName>
            </value>
            <value>
                <fullName>Inspected - Approved</fullName>
            </value>
            <value>
                <fullName>Inspected - Rejected</fullName>
            </value>
            <value>
                <fullName>Job Card Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>