unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Ply_Rating__c.field-meta.xml
<CustomField>
    <fullName>ETT_Ply_Rating__c</fullName>
    <formula>ETT_Work_Order_Line_Item__r.ETT_Ply_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ply Rating</label>
    <type>Text</type>
</CustomField>