unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Speed_Index__c.field-meta.xml
<CustomField>
    <fullName>ETT_Speed_Index__c</fullName>
    <formula>ETT_Work_Order_Line_Item__r.ETT_S_Index__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed Index</label>
    <type>Text</type>
</CustomField>