unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status__c</fullName>
    <formula>TEXT( ETT_Tyre_Inspection_Card__r.ETT_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>