unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Status_Changed_On__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status_Changed_On__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Changed On</label>
    <type>DateTime</type>
</CustomField>