unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Status_TI__c.field-meta.xml
<CustomField>
    <fullName>ETT_Status_TI__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Receptionist Accepted</fullName>
            </value>
            <value>
                <fullName>Inspection Team Accepted</fullName>
            </value>
            <value>
                <fullName>Inspection Team Rejected</fullName>
            </value>
            <value>
                <fullName>Job Card Created</fullName>
            </value>
            <value>
                <fullName>Buffing</fullName>
            </value>
            <value>
                <fullName>Skiving</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Cementing</fullName>
            </value>
            <value>
                <fullName>Filling</fullName>
            </value>
            <value>
                <fullName>Thread Preparation</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Rimming &amp; Enveloping</fullName>
            </value>
            <value>
                <fullName>Curing</fullName>
            </value>
            <value>
                <fullName>Final Inspection</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Removal of RIM Tube Flap</fullName>
            </value>
            <value>
                <fullName>Quality Control</fullName>
            </value>
            <value>
                <fullName>Estimation Accepted</fullName>
            </value>
            <value>
                <fullName>Purchase Order Created</fullName>
            </value>
            <value>
                <fullName>Delivery Note Created</fullName>
            </value>
            <value>
                <fullName>Delivery Note Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>