unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier_Code__c</fullName>
    <formula>ETT_Work_Order_Line_Item__r.ETT_Accounts__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Code</label>
    <type>Text</type>
</CustomField>