unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Supplier_Name__c</fullName>
    <formula>ETT_Tyre_Inspection_Card__r.ETT_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>