unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Tyre_Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Inspection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inspection Card</label>
    <referenceTo>ETT_Inspection_Card__c</referenceTo>
    <relationshipLabel>Tyre Inventory</relationshipLabel>
    <relationshipName>Tyre_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>