unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Tyre_Master__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Master</label>
    <referenceTo>ETT_Tyre_Master__c</referenceTo>
    <relationshipLabel>Tyre Inventory</relationshipLabel>
    <relationshipName>Tyre_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>