unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/ETT_Tyre_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Serial_Number__c</fullName>
    <formula>ETT_Work_Order_Line_Item__r.ETT_Tyre_Serial_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tyre Serial Number</label>
    <type>Text</type>
</CustomField>