unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <formula>IF( ISPICKVAL( Tyre_Type__c , &#39;Used&#39;) ,  ETT_Tyre_Master__r.ETT_Item_Code_Used__c ,  IF(ISPICKVAL( Tyre_Type__c , &#39;Scrapped&#39;),  ETT_Tyre_Master__r.ETT_Item_Code_Scrap__c ,  IF(ISPICKVAL( Tyre_Type__c , &#39;Refurbished&#39;),  ETT_Tyre_Master__r.ETT_Item_Code_Refurbished__c , &#39;&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Code</label>
    <type>Text</type>
</CustomField>