unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Party_Type__c</fullName>
    <formula>Text(ETT_Account__r.Party_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Type</label>
    <type>Text</type>
</CustomField>