unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/PO_Line__c.field-meta.xml
<CustomField>
    <fullName>PO_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To tag all serial numbers to PO lines</description>
    <label>PO Line</label>
    <referenceTo>ETT_Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Tyre Inventory</relationshipLabel>
    <relationshipName>Tyre_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>