unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Pricing_Information__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Information</label>
    <referenceTo>ETT_Pricing_Information__c</referenceTo>
    <relationshipLabel>Tyre Inventory</relationshipLabel>
    <relationshipName>Tyre_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>