unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Quotation_Created__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quotation Created</label>
    <type>Checkbox</type>
</CustomField>