unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/S_Index__c.field-meta.xml
<CustomField>
    <fullName>S_Index__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>S Index</label>
    <length>200</length>
    <type>Text</type>
</CustomField>