unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Stockable__c.field-meta.xml
<CustomField>
    <fullName>Stockable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stockable ?</label>
    <type>Checkbox</type>
</CustomField>