unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Temp_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Brand_Name__c</fullName>
    <description>Backend Purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Temp Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>