unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Temp_Pattern_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Pattern_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Temp Pattern Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>