unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Temp_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>Temp_Size_Name__c</fullName>
    <description>Backend purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Temp Size Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>