unpackaged/main/default/objects/ETT_Tyre_Inventory__c/fields/Tyre_Type__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Type__c</fullName>
    <label>Tyre Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Used</fullName>
                <default>true</default>
                <label>Used</label>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>