unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_Collection_Inventory.recordType-meta.xml
<RecordType>
    <fullName>ETT_Collection_Inventory</fullName>
    <active>true</active>
    <label>Collection Inventory</label>
</RecordType>