unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_Finished_Inventory.recordType-meta.xml
<RecordType>
    <fullName>ETT_Finished_Inventory</fullName>
    <active>true</active>
    <label>Finished Inventory</label>
</RecordType>