unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_Inspected_Inventory.recordType-meta.xml
<RecordType>
    <fullName>ETT_Inspected_Inventory</fullName>
    <active>true</active>
    <label>Inspected Inventory</label>
</RecordType>