unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_Return_Inventory.recordType-meta.xml
<RecordType>
    <fullName>ETT_Return_Inventory</fullName>
    <active>true</active>
    <label>Return Inventory</label>
</RecordType>