unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_Tyre_Asset.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Asset</fullName>
    <active>true</active>
    <label>Tyre Asset</label>
</RecordType>