unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/ETT_WIP_Inventory.recordType-meta.xml
<RecordType>
    <fullName>ETT_WIP_Inventory</fullName>
    <active>true</active>
    <label>WIP Inventory</label>
</RecordType>