unpackaged/main/default/objects/ETT_Tyre_Inventory__c/recordTypes/Scrap_Inventory.recordType-meta.xml
<RecordType>
    <fullName>Scrap_Inventory</fullName>
    <active>true</active>
    <label>Scrap Inventory</label>
</RecordType>