unpackaged/main/default/objects/ETT_Tyre_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETT_Account__c</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>ETT_Tyre_Serial_Number__c</columns>
    <columns>ETT_Collection_Date__c</columns>
    <columns>ETT_Status__c</columns>
    <columns>ETT_Inventory_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>